--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^23.8.6",
+    "@react-native-firebase/auth": "^23.8.6",
     "@react-native/new-app-screen": "0.83.1",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
