--- a/package.json
+++ b/package.json
@@ -1,44 +1,35 @@
 {
-  "name": "atomo_quantico",
-  "version": "0.0.1",
+  "name": "atomo-quantico",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "dev": "vite",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^23.8.6",
-    "@react-native-firebase/auth": "^23.8.6",
-    "@react-native/new-app-screen": "0.83.1",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "react-native": "^0.83.1",
-    "react-native-safe-area-context": "^5.5.2"
+    "autoprefixer": "^10.4.24",
+    "lucide-react": "^0.563.0",
+    "postcss": "^8.5.6",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "20.0.0",
-    "@react-native-community/cli-platform-android": "20.0.0",
-    "@react-native-community/cli-platform-ios": "20.0.0",
-    "@react-native/babel-preset": "0.83.1",
-    "@react-native/eslint-config": "0.83.1",
-    "@react-native/metro-config": "0.83.1",
-    "@react-native/typescript-config": "0.83.1",
-    "@types/jest": "^29.5.13",
-    "@types/react": "^19.2.13",
-    "@types/react-test-renderer": "^19.1.0",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "19.2.0",
-    "typescript": "^5.8.3"
-  },
-  "engines": {
-    "node": ">=20"
+    "@eslint/js": "^9.39.1",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.48.0",
+    "vite": "^7.3.1"
   }
 }
