feat: add android support with capacitor and firebase integration

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^8.1.0",
+    "@capacitor/cli": "^8.1.0",
+    "@capacitor/core": "^8.1.0",
     "d3-cloud": "^1.2.8",
     "firebase": "^12.9.0",
     "framer-motion": "^12.34.0",
